k8s/namespace-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mail-service-prod
  labels:
    name: mail-service-prod
    app.kubernetes.io/name: mail-service
    app.kubernetes.io/version: "0.1.0"
    environment: production
