k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mail-service
  labels:
    name: mail-service
    app.kubernetes.io/name: mail-service
    app.kubernetes.io/version: "0.1.0"
