k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-service-frontend
  namespace: mail-service-prod
  labels:
    app.kubernetes.io/name: mail-service-frontend
    app.kubernetes.io/version: "0.1.0"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mail-service-frontend
