k8s/postfix-relay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfix-relay
  namespace: mail-service-prod
  labels:
    app.kubernetes.io/name: postfix-relay
    app.kubernetes.io/version: 0.1.0
spec:
  type: ClusterIP
  ports:
  - port: 25
    targetPort: 25
    protocol: TCP
    name: smtp
  selector:
    app.kubernetes.io/name: postfix-relay
