k8s/smtp-relay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-relay
  namespace: mail-service-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-relay
  template:
    metadata:
      labels:
        app: smtp-relay
    spec:
      containers:
      - name: smtp-relay
        image: namshi/smtp
        ports:
        - containerPort: 25
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-relay
  namespace: mail-service-prod
spec:
  selector:
    app: smtp-relay
  ports:
  - port: 25
    targetPort: 25
  type: ClusterIP
